--- a/contact.html
+++ b/contact.html
@@ -59,16 +59,7 @@
             <section class="contact-text cont-text-cont-main">
                 <h3>Let us bring your story to life!</h3>
                 <p>
-                    At VISIONREY we offer a range of creative services to help you capture your vision. 
-                </p>
-                <ul>
-                <li>Stunning reel footage.</li> 
-                <li>Professional headshots.</li> 
-                <li>Beautiful wedding photography.</li> 
-                <li>Expert branding and social media services.</li>
-                </ul>
-                <p>
-                    We're committed to delivering high-quality results with style and professionalism. Fill out the form below today to get in touch with us directly. We would love to make your dreams a reality!
+                    We're committed to delivering high-quality results with style and professionalism. Fill out the form below today to get in touch with us directly.
                 </p>
             </section>
 
@@ -91,17 +82,6 @@
                             <option value="twitter">Twitter</option>
                             <option value="ad">Ad</option>
                             <option value="referral">Referral</option>
-                        </select><br>
-
-                        <label for="what">What can we help you with?</label><br>
-                        <select id="what" name="what" placeholder="  Choose an option">
-                            <option value="headshots">Headshots</option>
-                            <option value="reel">Reel Footage</option>
-                            <option value="production">Production Handling</option>
-                            <option value="consultation">Production Consultation</option>
-                            <option value="realestate">Real Estate photography</option>
-                            <option value="wedding">Wedding photography</option>
-                            <option value="branding">Branding</option>
                         </select><br>
 
                         <label for="when">Date (if applicable)</label><br>
