--- a/showcase.html
+++ b/showcase.html
@@ -61,8 +61,8 @@
             <h2>VisionRey Showcase 2024!</h2>
             <h2>Sponsered by:</h2>
             <article class="sponsor-images">
-                <a href="https://www.finaldraft.com/"><img src="/images/FD_companyLogo_REVERSED.png"></a>
-                <a href="https://www.coverfly.com/"><img src="/images/Coverfly_Logo_Red.png"></a>
+                <a href="https://www.finaldraft.com/" target="_blank"><img src="/images/FD_companyLogo_REVERSED.png"></a>
+                <a href="https://www.coverfly.com/" target="_blank"><img src="/images/Coverfly_Logo_Red.png"></a>
             </article>    
             <article class="showcase-dates">
                 <h4>WHEN</h4>
@@ -135,8 +135,8 @@
        
 
 
-            <a href="https://www.finaldraft.com/"><img src="/images/FD_companyLogo_REVERSED.png"></a>
-            <a href="https://www.coverfly.com/"><img src="/images/Coverfly_Logo_Red.png"></a>
+            <a href="https://www.finaldraft.com/" target="_blank"><img src="/images/FD_companyLogo_REVERSED.png"></a>
+            <a href="https://www.coverfly.com/" target="_blank"><img src="/images/Coverfly_Logo_Red.png"></a>
         </section>
 
 
