--- a/showcase.html
+++ b/showcase.html
@@ -63,6 +63,10 @@
             <article class="sponsor-images">
                 <a href="https://www.finaldraft.com/" target="_blank"><img src="/images/FD_companyLogo_REVERSED.png"></a>
                 <a href="https://www.coverfly.com/" target="_blank"><img src="/images/Coverfly_Logo_Red.png"></a>
+                <a href="https://www.publishar.app/" target="_blank"><img src="/images/PublishARLogo.webp"></a>
+                <img src="/images/RenClub.webp">
+                <img src="/images/CareerACTivate.webp">
+                <img class="sklogo" src="/images/SKfinal-03.webp">
             </article>    
             <article class="showcase-dates">
                 <h4>WHEN</h4>
@@ -137,6 +141,10 @@
 
             <a href="https://www.finaldraft.com/" target="_blank"><img src="/images/FD_companyLogo_REVERSED.png"></a>
             <a href="https://www.coverfly.com/" target="_blank"><img src="/images/Coverfly_Logo_Red.png"></a>
+            <a href="https://www.publishar.app/" target="_blank"><img src="/images/PublishARLogo.webp"></a>
+            <img src="/images/RenClub.webp">
+            <img src="/images/CareerACTivate.webp">
+            <img class="sklogo" src="/images/SKfinal-03.webp">
         </section>
 
 
