--- a/showcase.html
+++ b/showcase.html
@@ -131,6 +131,18 @@
             </a>
         </section>
         
+
+            <br>
+            <br>
+        <section class="contact-text showcase-text speakers">
+            <h3>DON'T MISS OUR SPEAKERS</h3>
+            <br>
+            <section class="speaker-container">
+                <img src="/images/GleenKirschbaum.webp">
+                <img src="/images/PhilBoutte.webp">
+                <img src="/images/DarinToonder.webp">
+            </section>
+        </section>
         
         <section class="contact-text showcase-text sponsor-txt">
             <h3>THANK YOU TO OUR SPONSORS!</h3>
