--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <nav class="mobile-nav">
                 <ul>
                     <li><a href="index.html"><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></a></li>
-                    <li><a href="showcase.html">2024 SHOWCASE</a></li>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="video.html">PRODUCTION</a></li>
                     <li><a href="learn.html">ABOUT US</a></li>
@@ -57,7 +56,7 @@
               </section>
               
 
-        <section class="showcase">
+<!--         <section class="showcase">
             
                 <h2><a href="/showcase.html">You're Invited!</a></h2>
                 <h2><a href="/showcase.html">VisionRey Showcase 2024!</a></h2>
@@ -86,7 +85,7 @@
             <a href="https://www.eventbrite.com/e/visionrey-private-showcase-tickets-863446430517?aff=oddtdtcreator" target="_blank">
                 <input class="button tickets-button" type="submit" value="GET TICKETS!">
             </a>
-        </section>      
+        </section>       -->
 
 
         <article class="about">
@@ -194,7 +193,6 @@
 
         <nav class="footnav">
             <ul>
-                <a href="showcase.html"><li>2024 SHOWCASE</li></a>
                 <a href="index.html"><li class="current-page">Home</li></a>
                 <a href="video.html"><li>Production</li></a>
                 <a href="learn.html"><li>About Us</li></a>
